--- a/published.html
+++ b/published.html
@@ -21,29 +21,32 @@
 	<div class="bg-black">
 		<div class="container">
 			<div class="row d-flex align-items-center justify-content-around py-2">
-				<div class="col-4">
+				<div class="col-6">
+					<div class="row d-flex justify-content-between">
+						<div class="col-xs-12 col-md-5 ">
+							<i class="fas fa-phone-alt fs-lg-11 text-white mr-2"></i>
+							<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
+						</div>
+						<div class="col-xs-12 col-md-5 ">
+										<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
+					<span class="fs-lg-11 text-white font-weight-lighter">info@nomre.net</span>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-4 d-flex justify-content-end">
 					<div class="btn-group mb-3 ">
 						<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
 							aria-expanded="false" style="color: rgb(255, 255, 255);">
 							<span class="custom-icon custom-icon-flag-az"></span>
 						</a>
-						<div class="dropdown-menu">
+						<div class="dropdown-menu z-high">
 							<a class="dropdown-item" href="#">Az</a>
 							<a class="dropdown-item" href="#">Rus</a>
 							<a class="dropdown-item" href="#">Eng</a>
 						</div>
 					</div>
 				</div>
-				<div class="col-4 d-flex justify-content-end align-items-center">
-					<i class="fas fa-phone-alt fs-lg-11 text-white mr-2"></i>
-					<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
-				</div>
-				<div class="col-4 d-flex justify-content-end align-items-center">
-					<i class="fas fa-envelope fs-lg-11 text-white mr-2"></i>
-					<span class="fs-lg-11 text-white font-weight-lighter">+994502210176</span>
-				</div>
-
-
 			</div>
 		</div>
 	</div>
